--- a/SugarMQ/sugarmq-web/.project
+++ b/SugarMQ/sugarmq-web/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SugarMQWeb</name>
+	<name>sugarmq-web</name>
 	<comment></comment>
 	<projects>
 	</projects>
