--- a/SugarMQ/pom.xml
+++ b/SugarMQ/pom.xml
@@ -35,11 +35,11 @@
 			<artifactId>spring-aop</artifactId>
 			<version>${spring-version}</version>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-asm</artifactId>
 			<version>${spring-asm-version}</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
